--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -87,7 +87,7 @@ header{
 
 /* this area contain code for both intro section */
 .intro-section{
-    min-height: 40vh;
+    min-height: 50vh;
     border: solid 1px #E0E0E0;
 }
 
@@ -104,12 +104,14 @@ header{
     display: inline-block;
     text-align: center;
     font-family: 'Montserrat Alternates', sans-serif;
+    font-size: 20px;
 }
 
 @media only screen and (max-width: 500px){
     .intro-section-div{
         width: 100%;
         display: block;
+        font-size: 15px;
     }
 }
 
