--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -25,7 +25,7 @@ html, body{
 
 header{
     box-shadow: 0 1px 20px rgba(46, 61, 73, .2);
-    background-color: #283573;
+    background-color: #074E68;
     border-bottom: solid 3px #9E9E9E;
     padding: 20px 0 20px 20px;
 }
@@ -68,7 +68,7 @@ header{
 
 #cover-section{
     margin: 0;
-    background-color: #5C6BC0;
+    background-color: #074E68;
     height: 60vh;
     text-align: center;
 }
@@ -128,7 +128,7 @@ header{
 /*styling footer */
 footer{
     box-shadow: 0 1px 20px rgba(46, 61, 73, .2);
-    background-color: #283573;
+    background-color: #074E68;
     font-family: 'Montserrat Alternates', sans-serif;
     color: antiquewhite;
     text-align: center;
