--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -25,7 +25,7 @@ html, body{
 
 header{
     box-shadow: 0 1px 20px rgba(46, 61, 73, .2);
-    background-color: #074E68;
+    background-color: #212121;
     border-bottom: solid 3px #9E9E9E;
     padding: 20px 0 20px 20px;
 }
@@ -68,17 +68,29 @@ header{
 
 #cover-section{
     margin: 0;
-    background-color: #074E68;
+    background-image: url('../images/lights.jpg');
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size:100% 100%;
     height: 60vh;
     text-align: center;
+    
+}
+
+#input-container{
+    margin-top: 25vh;
+    width: 70%;
+    padding: 15px 0 15px 0;
+    background:rgba(255,255,255,0.6);
+    opacity: 1;
 }
 
 #search-reg-input{
     width:70%;
     padding: 5px;
     height: 30px;
-    margin-top: 25vh;
-    color: #42A5F5;
+    
+    color: gray;
     font-weight: bolder;
     font-size: 20;
 }
@@ -128,7 +140,7 @@ header{
 /*styling footer */
 footer{
     box-shadow: 0 1px 20px rgba(46, 61, 73, .2);
-    background-color: #074E68;
+    background-color: #000000;
     font-family: 'Montserrat Alternates', sans-serif;
     color: antiquewhite;
     text-align: center;
