--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -68,10 +68,10 @@ header{
 
 #cover-section{
     margin: 0;
-    background-image: url('../images/lights.jpg');
+    background-image: url('../images/image2.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size:100% 100%;
+    background-size:cover;
     height: 60vh;
     text-align: center;
     
